force-app/main/default/objects/Apprentice_Work_EK__c/Apprentice_Work_EK__c.object-meta.xml
<CustomObject>
    <description>Created by: EK</description>
    <label>Apprentice Work EK</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Apprentice Work EK Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apprentice Work EK</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>