force-app/main/default/objects/Apprentice_Work_EK__c/fields/Assessment_EK__c.field-meta.xml
<CustomField>
    <fullName>Assessment_EK__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assessment EK</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>