force-app/main/default/objects/Apprentice_Work_EK__c/fields/Contact_EK__c.field-meta.xml
<CustomField>
    <fullName>Contact_EK__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by: EK</description>
    <label>Contact EK</label>
    <referenceTo>Contact_EK__c</referenceTo>
    <relationshipLabel>Apprentice Work EK</relationshipLabel>
    <relationshipName>Apprentice_Work_EK</relationshipName>
    <type>Lookup</type>
</CustomField>