force-app/main/default/objects/Apprentice_Work_EK__c/fields/Contact_Extra_1_EK__c.field-meta.xml
<CustomField>
    <fullName>Contact_Extra_1_EK__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by: Ek</description>
    <label>Contact Extra 1 EK</label>
    <referenceTo>Contact_EK__c</referenceTo>
    <relationshipLabel>Apprentice Work EK (Contact Extra 1 EK)</relationshipLabel>
    <relationshipName>Apprentice_Work_EK1</relationshipName>
    <type>Lookup</type>
</CustomField>