force-app/main/default/objects/Apprentice_Work_EK__c/fields/Contract_Extra_2_EK__c.field-meta.xml
<CustomField>
    <fullName>Contract_Extra_2_EK__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by: EK</description>
    <label>Contract Extra 2 EK</label>
    <referenceTo>Contact_EK__c</referenceTo>
    <relationshipLabel>Apprentice Work EK (Contract Extra 2 EK)</relationshipLabel>
    <relationshipName>Apprentice_Work_EK2</relationshipName>
    <type>Lookup</type>
</CustomField>