force-app/main/default/objects/Apprentice_Work_EK__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Created by: EK</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>