force-app/main/default/objects/Apprentice_Work_EK__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Created by: EK</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>