force-app/main/default/objects/Apprentice_Work_EK__c/fields/Files_Attachments_EK__c.field-meta.xml
<CustomField>
    <fullName>Files_Attachments_EK__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Files/Attachments EK</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>