force-app/main/default/objects/Apprentice_Work_EK__c/fields/Important_Tips_to_remember_EK__c.field-meta.xml
<CustomField>
    <fullName>Important_Tips_to_remember_EK__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Important Tips to remember EK</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>