force-app/main/default/objects/Apprentice_Work_EK__c/fields/Meeting_notes_EK__c.field-meta.xml
<CustomField>
    <fullName>Meeting_notes_EK__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meeting notes EK</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>