force-app/main/default/objects/Apprentice_Work_EK__c/fields/Need_To_Present_EK__c.field-meta.xml
<CustomField>
    <fullName>Need_To_Present_EK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by: EK</description>
    <label>Need To Present? EK</label>
    <type>Checkbox</type>
</CustomField>