force-app/main/default/objects/Apprentice_Work_EK__c/fields/Self_Assessment_EK__c.field-meta.xml
<CustomField>
    <fullName>Self_Assessment_EK__c</fullName>
    <description>1 (Beginner or Not Started)
2
3
4
5 (Expert)</description>
    <label>Self Assessment EK</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 (Beginner or Not Started)</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 (Expert)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>