force-app/main/default/objects/Apprentice_Work_EK__c/fields/Speedbump_Blocker_EK__c.field-meta.xml
<CustomField>
    <fullName>Speedbump_Blocker_EK__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Speedbump/Blocker EK</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>