force-app/main/default/objects/Apprentice_Work_EK__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Created by: EK</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Topic Picked</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Document Learning</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Next Steps</fullName>
            </value>
            <value>
                <fullName>Brainstorming</fullName>
            </value>
            <value>
                <fullName>Wireframe Submitted</fullName>
            </value>
            <value>
                <fullName>Specs Submitted</fullName>
            </value>
            <value>
                <fullName>Build In Progress</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Build Complete</fullName>
            </value>
            <value>
                <fullName>Final Testing</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Assignment Received</fullName>
            </value>
            <value>
                <fullName>Clarification Needed</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>