force-app/main/default/objects/Apprentice_Work_EK__c/fields/Start_Date_EK__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_EK__c</fullName>
    <description>Created by: EK</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date EK</label>
    <type>Date</type>
</CustomField>