force-app/main/default/objects/Apprentice_Work_EK__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by: EK</description>
    <label>Team</label>
    <referenceTo>Team_EK__c</referenceTo>
    <relationshipLabel>Apprentice Work EK</relationshipLabel>
    <relationshipName>Apprentice_Work_EK</relationshipName>
    <type>Lookup</type>
</CustomField>