force-app/main/default/objects/Apprentice_Work_EK__c/fields/Tools_Used__c.field-meta.xml
<CustomField>
    <fullName>Tools_Used__c</fullName>
    <description>Created by: EK</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tools Used</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>