force-app/main/default/objects/Apprentice_Work_EK__c/fields/Trailhead_Link_EK__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_Link_EK__c</fullName>
    <description>Created by: EK</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Ensure that the link to the page includes https:// prefix.</inlineHelpText>
    <label>Trailhead Link EK</label>
    <type>Url</type>
</CustomField>