force-app/main/default/objects/Apprentice_Work_EK__c/fields/What_Do_I_need_What_do_I_need_to_do__c.field-meta.xml
<CustomField>
    <fullName>What_Do_I_need_What_do_I_need_to_do__c</fullName>
    <description>Created by: EK</description>
    <encryptionScheme>None</encryptionScheme>
    <label>What Do I need/What do I need to do?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>