force-app/main/default/objects/Apprentice_Work_EK__c/fields/What_was_impact_on_Group_EK__c.field-meta.xml
<CustomField>
    <fullName>What_was_impact_on_Group_EK__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>What was impact on Group? EK</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>