force-app/main/default/objects/Apprentice_Work_EK__c/recordTypes/Group_Work_EK.recordType-meta.xml
<RecordType>
    <fullName>Group_Work_EK</fullName>
    <active>true</active>
    <description>This Record Type is for Group Work.</description>
    <label>Group Work EK</label>
</RecordType>