force-app/main/default/objects/Apprentice_Work_EK__c/recordTypes/Individual_Work_EK.recordType-meta.xml
<RecordType>
    <fullName>Individual_Work_EK</fullName>
    <active>true</active>
    <description>This is for Individual Work.</description>
    <label>Individual Work EK</label>
</RecordType>