force-app/main/default/objects/Apprentice_Work_EK__c/recordTypes/SFDC_EK.recordType-meta.xml
<RecordType>
    <fullName>SFDC_EK</fullName>
    <active>true</active>
    <description>This Record Type is for SFDC Work.</description>
    <label>SFDC EK</label>
</RecordType>